     eligible for random choice
   - there is a new 'weight' track preference allowing for non-uniform
     track selection.  See disorder(1) for details.
   - there is a new configuration item replay_min defining the minimum
     time before a played track can be picked at random.  The default is
     8 hours (which matches the earlier behaviour).

*** Web Interface

This has been largely rewritten.  The most immediate benefits are:
   - the search page is integrated into the choose page, and includes
     links to parent directories
   - if you try to do something you have insufficient rights for,
     instead of getting an error page or nothing happening, you are
     redirected to the login page

Customizers should find their lives easier: the syntax is less onerous,
it is possible to define macros to avoid repetition, and the
documentation is less monolithic.

** Disobedience

There is now a new user management window.  From here you can add and
remove users or modify their settings.

Relatedly, the server will only allow remote user management if you set
remote_userman to 'yes'.

** Miscellaneous

scripts/setup now honors command line options, and can set up network
play as well as the local default sound device.

** Bugs Fixed

 #2 Search results should link to directories
#10 Non-uniform track selection
#16 Cookie expiry causes user to be silently logged out and not
    subsequently redirected to login page
#20 Broken aliasing rules

* Changes up to version 3.0.2

Builds --without-server should work again.

The web interface is a bit more liberal in the cookie value syntax it
will accept.

Clients fail more gracefully if no password is available.

* Changes up to version 3.0.1

Debian upgrades from 2.0.x should now work better.

* Changes up to version 3.0

Important!  See README.upgrades when upgrading.

** Platforms And Installation

Mac OS X and FreeBSD are somewhat supported.  There is now a bash script